glib-macros/tests/clone_compiletest/04-clone-self-field-no-rename.rs
fn main() {
    use glib::clone;
    let v = std::rc::Rc::new(1);
    clone!(#[strong] self.v, move |x| {});
}
